# tondi-graph-inspector

./: .gitignore  README.md  docker-build.sh  docker-compose.yaml  docker-run.sh
api/: package-lock.json
api/src/: database.ts  model.ts
processing/: Cargo.toml  Dockerfile  config.toml
processing/database/migrations/: 000006_app_config.up.sql  000008_rename_kaspad_to_tondid.up.sql
processing/src/: config.rs  main.rs  version.rs
processing/src/database/: mod.rs  model.rs  operations.rs
processing/src/processing/: batch.rs  mod.rs
processing/src/rpc_client/: methods.rs  mod.rs  types.rs
web/: Dockerfile  README.md
web/public/: index.html
web/src/: addresses.ts  index.css  index.tsx
web/src/components/panel/: BlockInformation.tsx
web/src/components/sidebar/: Sidebar.tsx  TondiButton.tsx
web/src/model/: AppConfig.ts
