[package]
name = "tondi-graph-inspector-processing"
version = "0.1.0"
edition = "2021"
authors = ["Tondi Graph Inspector developers"]
description = "Processing component for Tondi Graph Inspector"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Database
tokio-postgres = "0.7"
postgres-types = "0.2"

# RPC client - using Tondi's RPC libraries as path dependencies
tondi-grpc-client = { path = "../../Tondi/rpc/grpc/client" }
tondi-rpc-core = { path = "../../Tondi/rpc/core" }
tondi-rpc-service = { path = "../../Tondi/rpc/service" }
tondi-utils = { path = "../../Tondi/utils" }
tondi-utils-tower = { path = "../../Tondi/utils/tower" }
tondi-notify = { path = "../../Tondi/notify" }
tondi-core = { path = "../../Tondi/core" }
tondi-hashes = { path = "../../Tondi/crypto/hashes" }

# Configuration
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
hex = "0.4"
bytes = "1.7"

# LRU cache
lru = "0.12"

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
tonic-build = "0.12"

